--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.7.2",
+    "firebase": "^7.5.2",
     "material-ui": "^0.20.2",
     "rbx": "^2.2.0",
     "react": "^16.10.1",
